build: Try reuseForks=false